# HybridLM

./: .gitignore  pyproject.toml  train.sh
core/: checkpoint_utils.py  torch_utils.py  train.py
core/config/: config.yaml  config_doc_mask.yaml  config_hybrid_gdn_la.yaml  tr_420M_x8gpu.yaml
core/data/: dataloaders.py  streaming_tokenized_dataset.py
core/data/datasets/: data_prep_utils.py  prepare.py  prepare_finewebedu_100BT.sh  prepare_slim_pajama.sh
core/engine/: engine.py
core/models/: construct.py  mlps.py  model.py  model_config.py
core/models/layers/: __init__.py  attn.py  delta_net.py  gated_deltanet.py  gla.py  linear_attention.py  linear_attn.py  mamba.py  mamba2.py  short_conv.py
core/optim/: init_optim.py
